Remove illegal-access argument, as not valid for java 17