@@ -126,9 +126,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${plugins.maven.surefire.version}</version>
-                <configuration>
-                    <argLine>--illegal-access=permit</argLine>
-                </configuration>
             </plugin>
         </plugins>
     </reporting>
